--- a/src/components/pages/Aboutus.css
+++ b/src/components/pages/Aboutus.css
@@ -33,6 +33,10 @@
     gap: 64px
 }
 
+.aboutus img {
+    border-radius: 6px;
+}
+
 
 
 .imgs-small {
@@ -57,7 +61,7 @@
 }
 
 .ourstory-text {
-    width: 60%;
+    width: 50%;
 }
 
 .ourstory-image {
@@ -84,5 +88,19 @@
 }
 
 .mission-text {
-    width: 60%;
+    width: 50%;
+
+}
+
+.mission-image img {
+    width: 400px;
+    height: 300px;
+}
+
+.imgs-large img {
+    width: 400px;
+}
+
+.imgs-small img {
+    width: 200px;
 }
