--- a/src/components/ContentSession.css
+++ b/src/components/ContentSession.css
@@ -43,7 +43,12 @@ body {
     font-size: var(--Desktop-Text-Heading3);
     margin-top: 16px;
     color: var(--primary-blue);
-    margin: 32px 16px 16px 40px;
+}
+
+.content-homepage .title {
+    margin-top: 32px;
+    margin-left: 32px;
+    color: var(--primary-blue);
 }
 
 .content-homepage .title:hover {
