--- a/src/components/pages/ProjectCard.css
+++ b/src/components/pages/ProjectCard.css
@@ -34,6 +34,10 @@
     margin: 8px 64px;
 }
 
+.project-card:hover {
+    border: 2px solid var(--primary-blue);
+}
+
 
 .moredetail-btn {
     position: relative;
