--- a/src/components/pages/ProjectDetail.css
+++ b/src/components/pages/ProjectDetail.css
@@ -29,19 +29,20 @@
 }
 
 .project-detail-page .top-banner {
-    background: url("https://u4d2z7k9.rocketcdn.me/wp-content/uploads/2022/07/Untitled-design-2022-02-21T125712.140.jpg");
+    background: url("https://images.unsplash.com/photo-1579847188804-ecba0e2ea330?q=80&w=2848&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     height: 300px;
 
 }
 
 .project-detail-page .content-banner {
     text-align: center;
-    color: white;
+    color: var(--text-black);
     padding-top: 100px;
+    margin: 0 70px;
 
 }
 
-.project-container {
+.project-detail-page .project-container {
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -49,7 +50,7 @@
     margin-top: 32px;
 }
 
-.content-project {
+.project-detail-page .content-project {
     display: flex;
     flex-direction: row;
     gap: 120px;
@@ -57,7 +58,7 @@
 
 
 
-.left-content {
+.project-detail-page .left-content {
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -65,30 +66,30 @@
 
 
 
-.project-tile {
+.project-detail-page .project-tile {
     color: var(--primary-blue);
 }
 
-.project-description {
+.project-detail-page .project-description {
     font-size: 1.2rem;
     font-weight: 500;
 }
 
-.main-content {
+.project-detail-page .main-content {
     color: var(--black-dark)
 }
 
-.line {
+.project-detail-page .line {
     width: 100%;
     height: 2px;
     background: var(--primary-blue);
 }
 
-.main-right-content {
+.project-detail-page .main-right-content {
     margin-top: 100px;
 }
 
-.highlight span {
+.project-detail-page .highlight span {
     background: var(--primary-blue);
     font-size: 0.9rem;
     color: var(--text-white);
@@ -97,23 +98,25 @@
     margin-right: 16px;
 }
 
-.image-gallery {
+.project-detail-page .image-gallery {
     display: flex;
 }
 
-.image-gallery {
+.project-detail-page .image-gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
 }
 
-.image-gallery>li {
+
+.project-detail-page .image-gallery>li {
     flex-basis: 350px;
     /* width: 350px; */
+    list-style: none;
 }
 
-.image-gallery li img {
+.project-detail-page .image-gallery li img {
     object-fit: cover;
     max-width: 100%;
     height: auto;
