--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -37,6 +37,7 @@ body {
 
 }
 
+
 .name-input {
     display: flex;
     gap: 32px;
@@ -51,10 +52,10 @@ body {
 }
 
 
-form .user-details .input-box {
+.contact-form form .user-details .input-box {
     margin: 8px 0 8px 0;
     width: calc(100% /2 -16px);
-
+    height: auto
 }
 
 .user-details .input-box .details {
