--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -44,6 +44,8 @@ footer {
 
 }
 
+
+
 .main-footer {
     display: flex;
     flex-direction: row;
@@ -52,6 +54,9 @@ footer {
 
 .info-footer {
     width: 450px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
 }
 
 .info-footer p {
@@ -104,6 +109,63 @@ footer {
     color: var(--text-white);
     text-align: center;
 }
+
+.social-media-list {
+    position: relative;
+    font-size: 22px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    width: fit-content;
+}
+
+.social-media-list li a {
+    color: #fff;
+}
+
+.social-media-list li {
+    position: relative;
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    margin: 10px 3px;
+    line-height: 60px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: var(--primary-blue);
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+
+.social-media-list li:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 50%;
+    opacity: 0;
+    box-shadow: 0 0 0 1px #fff;
+    transition: all .2s ease-in-out;
+}
+
+.social-media-list li:hover {
+    background-color: #fff;
+}
+
+.social-media-list li:hover:after {
+    opacity: 1;
+    transform: scale(1.12);
+    transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
+}
+
+.social-media-list li:hover a {
+    color: #000;
+}
+
 
 @media screen and (max-width: 1200px) {
     .main-footer {
