--- a/src/components/pages/ToolCostSuggestion.css
+++ b/src/components/pages/ToolCostSuggestion.css
@@ -26,10 +26,10 @@
 
 
 
-.tool-cost-suggestion-page {}
 
 
-.form .header {
+
+.tool-page-form .header {
     text-align: center;
     padding: 20px;
     display: grid;
@@ -38,11 +38,11 @@
 
 }
 
-.form .header p {
+.tool-page-form .header p {
     color: #555;
 }
 
-.form .body {
+.tool-page-form .body {
 
     border-radius: 20px;
     border: 2px solid var(--primary-blue);
@@ -52,27 +52,27 @@
 
 
 
-.form .steps {
+.tool-page-form .steps {
 
     display: flex;
     flex-direction: column;
     padding: 16px;
 }
 
-.form .steps .step {
+.tool-page-form .steps .step {
 
     padding: 5px 15px 15px;
 
 
 }
 
-.form .steps .step h4 {
+.tool-page-form .steps .step h4 {
     margin-bottom: 5px;
     color: var(--blue-dark);
 
 }
 
-.form .steps .step p {
+.tool-page-form .steps .step p {
     color: #555;
     max-width: 90%;
     font-size: 15px;
@@ -80,7 +80,7 @@
 
 }
 
-.form .steps .step .grid {
+.tool-page-form .steps .step .grid {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -88,14 +88,14 @@
 
 }
 
-.form .steps .step .grid .col {
+.tool-page-form .steps .step .grid .col {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
     font-size: 15px;
 }
 
-.form .steps .step .grid input {
+.tool-page-form .steps .step .grid input {
     width: 100%;
     padding: 8px;
     border: 1px solid #bbb;
@@ -103,12 +103,12 @@
 }
 
 
-.form .steps .step .grid .col .checkbox input {
+.tool-page-form .steps .step .grid .col .checkbox input {
     display: none;
 
 }
 
-.form .steps .step .grid .col .checkbox label {
+.tool-page-form .steps .step .grid .col .checkbox label {
     display: flex;
     padding: 8px;
     border: 1px solid #bbb;
@@ -118,20 +118,20 @@
 
 }
 
-.form .steps .step .grid .col .checkbox input:checked+label {
+.tool-page-form .steps .step .grid .col .checkbox input:checked+label {
     background: #00aace;
     color: #fff;
 
 }
 
-.form .steps .step .confirmation {
+.tool-page-form .steps .step .confirmation {
     display: grid;
     text-align: center;
     place-items: center;
     gap: 16px;
 }
 
-.form .steps .step .confirmation button {
+.tool-page-form .steps .step .confirmation button {
     background: var(--primary-blue);
     color: #fff;
     padding: 10px 20px;
@@ -142,7 +142,7 @@
     cursor: pointer;
 }
 
-.form .steps .step .confirmation button:hover {
+.tool-page-form .steps .step .confirmation button:hover {
     background: var(--green-light);
     color: var(--black-dark);
 }
