--- a/src/components/TopBanner.css
+++ b/src/components/TopBanner.css
@@ -59,7 +59,18 @@ video {
 }
 
 .bg-overlay {
-    background: url('https://images.unsplash.com/photo-1594289765464-d4d8b4dcf42d?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background: rgba(0, 0, 0);
+    width: 100%;
+    height: 430px;
+    opacity: 50%;
+    display: flex;
+    position: absolute;
+    top: 194px;
+    object-fit: fill;
+}
+
+.bg-overlay-active {
+    background: url("https://sustainablereview.com/wp-content/uploads/2022/06/Lack-of-Access-to-Clean-Water.png");
     width: 100%;
     height: 430px;
     opacity: 50%;
