--- a/src/components/pages/CreateAccount.css
+++ b/src/components/pages/CreateAccount.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin: 16px 200px;
 
 }
 
@@ -52,6 +52,10 @@
     font-weight: 500;
     position: relative;
     text-align: center;
+}
+
+.details {
+    font-size: 16px;
 }
 
 .terms {
