--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -50,10 +50,10 @@ footer {
     display: flex;
     flex-direction: row;
     gap: 300px;
+    height: 100%;
 }
 
 .info-footer {
-    width: 450px;
     text-align: left;
     display: flex;
     flex-direction: column;
