--- a/src/components/pages/ProductDetail.css
+++ b/src/components/pages/ProductDetail.css
@@ -305,4 +305,10 @@ body {
         width: 100%;
         margin-bottom: 10px;
     }
+
+    .product-detail {
+
+        background-color: var(--background-white);
+
+    }
 }
