--- a/src/components/TopBanner.css
+++ b/src/components/TopBanner.css
@@ -70,7 +70,7 @@ video {
 }
 
 .bg-overlay-active {
-    background: url("https://sustainablereview.com/wp-content/uploads/2022/06/Lack-of-Access-to-Clean-Water.png");
+    background: url("https://cdn.britannica.com/65/123865-050-687A9E4C/Rain.jpg");
     width: 100%;
     height: 430px;
     opacity: 50%;
