--- a/src/components/pages/ContactUs.css
+++ b/src/components/pages/ContactUs.css
@@ -26,11 +26,10 @@
 
 
 .contact-us {
-    width: 80%;
+
     background: #fff;
     border-radius: 6px;
-    padding: 20px 60px 40px 40px;
-    margin: 0 auto;
+    margin: 32px 64px;
 
 }
 
@@ -52,7 +51,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    text-align: center;
     align-items: center;
 
 }
@@ -98,7 +97,7 @@
 }
 
 .contact-us .content .right-side {
-    width: 75%;
+
     margin-left: 75px;
 
 }
@@ -115,43 +114,44 @@
 
 
 
-@media (max-width:950px) {
+@media (max-width: 650px) {
+
     .contact-us {
-        width: 90%;
-        padding: 20px 60px 40px 40px;
-
-    }
-
-
-}
-
-
-@media (max-width:820px) {
-    .contact-us {
-        margin: 40px 0;
-        height: 100%;
-
-    }
-
-    .contact-us .content {
-        flex-direction: column-reverse;
-    }
-
-    .contact-us .content .left-side {
         width: 100%;
-        flex-direction: row;
-        margin-top: 40px;
-        flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
     }
 
-
-    .contact-us .content .left-side::before {
+    .content .left-side::before {
         display: none;
     }
 
-    .contact-us .content .right-side {
-        width: 100%;
-        margin-left: 0px;
+    .contact-us .content {
+        display: flex;
+        flex-direction: column;
+
     }
+
+    .contact-us .content .left-side {
+
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+
+
+    }
+
+    .contact-us .content .right-side {
+        text-align: center;
+        margin-left: 32px;
+        width: 100%;
+        margin-bottom: 32px;
+
+    }
+
+
+
+
 
 }
