--- a/src/components/pages/InteractiveTools.css
+++ b/src/components/pages/InteractiveTools.css
@@ -26,7 +26,7 @@
 
 
 .tools-page {
-    margin: 32px 64px;
+    margin: 32px 24px;
 }
 
 .tools-page .title {
@@ -56,12 +56,11 @@
 
 
 .tools-page .toolbox {
-    background: url("https://primebldg.com/wp-content/uploads/2022/08/0011_IMG_6655-5.png");
+    background: var(--neutral-blue);
     border-radius: 6px;
-    width: 300px;
-    height: 300px;
+    width: 50%;
     text-align: center;
-    color: var(--primary-blue);
+    color: var(--text-white);
     align-items: center;
     font-size: var(--Desktop-Text-Heading4);
     margin-top: 20px;
@@ -103,4 +102,14 @@
         display: flex;
         flex-direction: column;
     }
+
+    .tools-page {
+        margin: 32px 24px;
+    }
+
+
+    .tools-page .toolbox {
+        width: 100%;
+    }
+
 }
