--- a/src/components/pages/LearnandAsk.css
+++ b/src/components/pages/LearnandAsk.css
@@ -38,7 +38,7 @@
     background: #e2e2e2;
     padding: 16px;
     text-align: center;
-    width: 50%;
+    width: 70%;
     border-radius: 8px;
     color: var(--text-black);
 }
@@ -68,4 +68,53 @@
 
 .our-learn .learn-content {
     margin: 16px 64px;
+}
+
+.youtube-videos {
+    text-align: center;
+
+}
+
+.youtube-videos h3 {
+    margin-bottom: 24px;
+}
+
+.video-list {
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    margin-bottom: 24px;
+}
+
+.learn-content img {
+    width: 500px;
+    border-radius: 8px;
+}
+
+@media (max-width: 650px) {
+
+    .our-learn .learn-intro {
+        width: 90%;
+
+    }
+
+    .our-learn .learn-info {
+        width: 100%;
+        margin: 0;
+
+
+    }
+
+    .our-learn .learn-content {
+        padding: 0;
+        margin: 16px;
+
+    }
+
+    .video-list {
+        flex-direction: column;
+    }
+
 }
