--- a/src/components/pages/News.css
+++ b/src/components/pages/News.css
@@ -35,6 +35,7 @@
 .pic-show {
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 .left-side {
@@ -53,7 +54,9 @@
     border: 8px;
     width: 350px;
     height: 200px;
+    margin: 0 auto;
     border-radius: 8px;
+
 }
 
 .news-page .pic-show img:hover {
@@ -76,4 +79,32 @@
 
 .news-page .news-container .title {
     color: var(--primary-blue);
+}
+
+@media (max-width: 650px) {
+
+    .news-page {
+        display: flex;
+        flex-direction: column;
+        margin: 32px 16px;
+    }
+
+    .left-side {
+
+        flex-direction: column;
+    }
+
+    .news-page .news-photo img {
+        width: 300px;
+    }
+
+
+    .news-page .pic-show img {
+        border: 8px;
+        width: 300px;
+        height: 200px;
+        border-radius: 8px;
+    }
+
+
 }
