--- a/src/components/pages/Payment.css
+++ b/src/components/pages/Payment.css
@@ -29,11 +29,11 @@
 }
 
 .visa img {
-    width: 70%;
+    width: 100px;
 }
 
 .paypal img {
-    width: 20%
+    width: 100px
 }
 
 .card-show {
@@ -87,7 +87,7 @@
 }
 
 
-.form {
+.payment-page .form {
     margin-left: 32px;
     margin-bottom: 64px;
     margin-top: 0px;
@@ -133,4 +133,45 @@
 
 .form input:hover {
     border-color: var(--green-dark);
+}
+
+@media (max-width: 650px) {
+
+
+
+    .payment-page {
+        width: 100vw;
+    }
+
+    .container-payment-page {
+
+        flex-direction: column;
+        margin: 0;
+        gap: 0;
+    }
+
+    .back-to-shopping-cart {
+        flex-direction: column;
+    }
+
+    .row-info-flex {
+        flex-direction: column;
+    }
+
+    .billing,
+    .payment {
+        width: 100%;
+    }
+
+
+    .proceed-check-out {
+        background: var(--primary-blue);
+        width: 80%;
+        padding: 16px;
+        border-radius: 8px;
+        color: var(--text-white);
+        margin: 16px auto;
+    }
+
+
 }
