--- a/src/components/pages/ProjectCard.css
+++ b/src/components/pages/ProjectCard.css
@@ -72,3 +72,12 @@
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
 }
+
+@media screen and (max-width: 768px) {
+    .project-card {
+        text-align: center;
+        background: var(--background-white);
+        width: 90%;
+        margin: 8px 16px;
+    }
+}
