--- a/src/components/pages/ShoppingCart.css
+++ b/src/components/pages/ShoppingCart.css
@@ -255,5 +255,11 @@ button {
         text-align: center;
     }
 
+    .shoppingcart-page .remove-btn i {
+
+        font-size: 24px;
+
+    }
+
 
 }
