--- a/src/components/TopBanner.css
+++ b/src/components/TopBanner.css
@@ -65,7 +65,7 @@ video {
     opacity: 50%;
     display: flex;
     position: absolute;
-    top: 194px;
+    top: 198px;
     object-fit: fill;
 }
 
@@ -73,10 +73,10 @@ video {
     background: url("https://cdn.britannica.com/65/123865-050-687A9E4C/Rain.jpg");
     width: 100%;
     height: 430px;
-    opacity: 50%;
+    opacity: 40%;
     display: flex;
     position: absolute;
-    top: 194px;
+    top: 198px;
     object-fit: fill;
 }
 
@@ -85,7 +85,7 @@ video {
     color: var(--background-white);
     display: flex;
     position: absolute;
-    top: 230px;
+    top: 240px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -142,5 +142,29 @@ video {
 
     .content {
         margin-top: 40px;
+    }
+
+    .bg-overlay-active {
+        background: url("https://cdn.britannica.com/65/123865-050-687A9E4C/Rain.jpg");
+        width: 100%;
+        height: 430px;
+        opacity: 100%;
+        display: flex;
+        position: absolute;
+        top: 198px;
+        object-fit: fill;
+    }
+
+    .top-banner .content {
+        background: none;
+        color: var(--background-white);
+        display: flex;
+        position: absolute;
+        top: 230px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 400px;
     }
 }
