--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -329,4 +329,16 @@ login-in i:hover {
         display: contents;
     }
 
+    .header {
+
+        left: 0;
+        top: 0;
+        width: 100%;
+        z-index: 0;
+        background-color: var(--background-white);
+
+
+
+    }
+
 }
