--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -171,7 +171,7 @@ login-in i:hover {
 }
 
 .active {
-    background: var(--green-light);
+    background: transparent;
     border-radius: 6px;
     padding: 8px 16px;
 
@@ -237,6 +237,12 @@ login-in i:hover {
         scale: 0.9;
     }
 
+    .active {
+        background: var(--green-light);
+        border-radius: 6px;
+        padding: 8px 16px;
+
+    }
 
 }
 
@@ -305,7 +311,7 @@ login-in i:hover {
     }
 
     .nav-links {
-        display: block;
+
         text-align: center;
         width: 100%;
         text-decoration: none;
