--- a/src/components/TopBanner.css
+++ b/src/components/TopBanner.css
@@ -134,20 +134,27 @@ video {
 
 
 @media screen and (max-width: 768px) {
-    .bg-overlay {
 
-        height: 502px;
-
-    }
 
     .content {
         margin-top: 40px;
     }
 
+    .bg-overlay {
+        background: rgba(0, 0, 0);
+        width: 100%;
+        height: 500px;
+        opacity: 50%;
+        display: flex;
+        position: absolute;
+        top: 198px;
+        object-fit: fill;
+    }
+
     .bg-overlay-active {
         background: url("https://cdn.britannica.com/65/123865-050-687A9E4C/Rain.jpg");
         width: 100%;
-        height: 450px;
+        height: 510px;
         opacity: 100%;
         display: flex;
         position: absolute;
